--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="assets/css/hamburgers.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Home page</title>
+    <body>
+      <header class="header"> <a class="header__logo" href="">Logos</a>
+        <label class="header__search" for="search"> 
+          <svg viewbox="0 0 50 50" width="50" height="50">
+            <use xlink:href="../../assets/img/svg-sprite.svg#loc"></use>
+          </svg>
+          <p>вдплыывлаыващ</p>
+        </label>
+      </header><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    </body>
   </head>
-  <body>
-    <header class="header"> <a class="header__logo" href="">Logos</a>
-      <label class="header__search" for="search"> 
-        <svg viewbox="0 0 50 50" width="50" height="50">
-          <use xlink:href="../../assets/img/svg-sprite.svg#loc"></use>
-        </svg>
-      </label>
-    </header>
-  </body>
 </html>
