--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="header__info"> 
           <label class="header__search" for="search">
             <ion-icon name="location-outline"></ion-icon>
-            <input type="text" id="search">
+            <input type="text" id="search" placeholder="">
             <ion-icon name="search-outline"></ion-icon>
           </label>
           <div class="header__info-phone"> <a href=""> 
