--- a/index.html
+++ b/index.html
@@ -7,25 +7,16 @@
     <link rel="stylesheet" href="assets/css/hamburgers.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Home page</title>
-<<<<<<< HEAD
-    <header class="header"> <a class="header__logo" href="">Logos</a>
-      <label class="header__search" for="search"> 
-        <svg viewbox="0 0 50 50" width="50" height="50">
-          <use xlink:href="../../assets/img/svg-sprite.svg#loc"></use>
-        </svg>
-      </label>
-    </header>
-=======
     <body>
       <header class="header container"><a class="header__logo" href="">Logos</a>
         <div class="header__info"> 
           <label class="header__search" for="search">
             <ion-icon name="location-outline"></ion-icon>
-            <input type="text" id="search" placeholder="">
+            <input type="text" id="search" placeholder="Введите адрес доставки">
             <ion-icon name="search-outline"></ion-icon>
           </label>
           <div class="header__info-phone"> <a href=""> 
-              <ion-icon name="search-outline"></ion-icon>
+              <ion-icon name="call-outline"></ion-icon>
               <div class="header__info-contact"> <span>Контакты</span><a href="tel:+7 (917) 510-57-59">+7 (917) 510-57-59</a></div></a></div>
         </div>
         <button class="header__cart"> <span>Корзина</span>
@@ -35,6 +26,5 @@
       </header><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </body>
->>>>>>> 578f3f5463f7279d481a1ef74f38e222893cba0f
   </head>
 </html>
