--- a/index.html
+++ b/index.html
@@ -8,23 +8,33 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Home page</title>
     <body>
-      <header class="header container"><a class="header__logo" href="">Logos</a>
-        <div class="header__info"> 
-          <label class="header__search" for="search">
-            <ion-icon name="location-outline"></ion-icon>
-            <input type="text" id="search" placeholder="Введите адрес доставки">
-            <ion-icon name="search-outline"></ion-icon>
-          </label>
-          <div class="header__info-phone"> <a href=""> 
-              <ion-icon name="call-outline"></ion-icon>
-              <div class="header__info-contact"> <span>Контакты</span><a href="tel:+7 (917) 510-57-59">+7 (917) 510-57-59</a></div></a></div>
-        </div>
-        <button class="header__cart"> <span>Корзина</span>
-          <hr><span>4</span>
+      <header class="header container">
+        <button class="hamburger hamburger--collapse" type="button"><span class="hamburger-box"><span class="hamburger-inner"></span></span>
+          <p>Меню</p>
+        </button><a class="header__logo" href="">Logos</a>
+        <label class="header__search" for="search">
+          <ion-icon name="location-outline"></ion-icon>
+          <input type="text" id="search" placeholder="Введите адрес доставки">
+          <ion-icon name="search-outline"></ion-icon>
+        </label>
+        <div class="header__phone"> <a href=""> 
+            <ion-icon name="call-outline"></ion-icon>
+            <div class="header__phone-contact"> <span>Контакты</span><a href="tel:+7 (917) 510-57-59">+7 (917) 510-57-59</a></div></a></div>
+        <button class="header__cart"> 
+          <ion-icon name="cart-outline"></ion-icon><span>Корзина</span>
+          <hr>
+          <p>4</p>
         </button>
-        <button class="hamburger hamburger--collapse is-active" type="button"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
-      </header><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      </header>
+      <div class="header__search-adaptive-block"> 
+        <label class="header__search-adaptive" for="search">
+          <ion-icon name="location-outline"></ion-icon>
+          <input type="text" id="search" placeholder="Введите адрес доставки">
+          <ion-icon name="search-outline"></ion-icon>
+        </label>
+      </div><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      <script src="./assets/js/script.js"> </script>
     </body>
   </head>
 </html>
