--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>Home page</title>
   </head>
-  <body><a href="#">wcccce-asfhldsjgfkjdsbvhjskj</a>
+  <body>
+    <article class="about container">
+      <div class="about__content"> 
+        <div class="about__description"> 
+          <h2 class="title__about">
+             НАШЕ КАФЕ</h2>
+          <p2 class="text__about">
+             Мы расположены в одном из самых живописных мест города — на берегу реки, это ваш оазис в черте города, куда можно сбежать от шумного и пыльного мегаполиса. Мы, действительно уникальные, ведь все продумано до мелочей: проект построен из дикого закарпатского сруба, камин в основном зале ресторана и панорамные окна с видом на реку, уютные беседки на берегу реки и лучшая видовая террасса, шатер с посадкой на 200 человек, сказочный детский домик и бассейн.</p2>
+        </div>
+      </div>
+    </article>
   </body>
 </html>
