--- a/card.html
+++ b/card.html
@@ -32,13 +32,16 @@
                 <h2 class="check-price">259 ₽</h2>
               </div>
               <div class="title-desc"> 
-                <div class="banner-span"><span class="titles__span">Белки</span><span class="titles__span">Жиры</span><span class="titles__span">Углеводы</span><span class="titles__span">Ккал</span><span class="titles__span">Вес</span></div>
+                <div class="banner-span"><span class="titles__span">Белки</span><span class="titles__span">Жиры</span><span class="titles__span">Углеводы </span><span class="titles__span">Ккал</span><span class="titles__span">Вес</span></div>
                 <hr class="line">
                 <div class="span-grams"> <span class="grams">17.23</span><span class="grams">7.63</span><span class="grams">22.35</span><span class="grams">234</span><span class="grams">210</span></div>
               </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="card__title container">
+        <h2 class="title-blog__cards">С ЭТИМ ТОВАРОМ ПОКУПАЮТ</h2>
       </div><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </body>
