--- a/card.html
+++ b/card.html
@@ -65,8 +65,13 @@
           </div>
         </div>
       </div>
-      <div class="card__title container">
-        <h2 class="title-blog__cards">С ЭТИМ ТОВАРОМ ПОКУПАЮТ</h2>
+      <div class="card__title container"> 
+        <h2 class="title-blog__cards">С ЭТИМ ТОВАРОМ ПОКУПАЮТ </h2>
+      </div>
+      <div class="card-blog container"> 
+        <div class="cards">
+          <div class="card"> <img class="card__image" src="../assets/img/card-img1.png" alt=""></div>
+        </div>
       </div><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
       <script src="./assets/js/script.js"> </script>
