--- a/index.html
+++ b/index.html
@@ -37,10 +37,24 @@
         <div class="banner__content container"><img src="assets/img/banner-text.svg" alt=""></div>
       </div>
       <nav class="nav"> 
-        <div class="nav__item container"><a class="active" href="">Холодные закуски</a><a href="">Горячие закуски</a><a href="">Мясные блюда</a><a href="">Супы</a><a href="">Рыбные блюда</a><a href="">Гриль</a><a href="">Фирменные блюда</a><a href="">Напитки</a></div>
+        <div class="nav__item container"><a href="">Холодные закуски</a><a href="">Горячие закуски</a><a href="">Мясные блюда</a><a href="">Супы</a><a href="">Рыбные блюда</a><a href="">Гриль</a><a href="">Фирменные блюда</a><a href="">Напитки</a></div>
       </nav>
       <section class="snacks container">
         <h2 class="snacks__title">Холодные закуски</h2>
+        <div class="snacks__cards"> 
+          <div class="snacks__card"> <img src="./assets/img/card-1.png" alt="">
+            <div class="snacks__card-info"> 
+              <div class="snacks__card-title"> 
+                <p>Индейка</p><span>Вес: 225 г</span>
+              </div>
+              <p>Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком</p>
+              <div class="snacks__card-btn"> 
+                <button>-</button><span>450 ₽</span>
+                <button>+</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
       <script src="./assets/js/script.js"> </script>
