--- a/card.html
+++ b/card.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/hamburgers.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Home page</title>
+    <title>Card </title>
     <body>
       <header class="header container">
         <button class="hamburger hamburger--collapse" type="button"><span class="hamburger-box"><span class="hamburger-inner"></span></span>
@@ -70,7 +70,63 @@
       </div>
       <div class="card-blog container"> 
         <div class="cards">
-          <div class="card"> <img class="card__image" src="../assets/img/card-img1.png" alt=""></div>
+          <div class="card"> <img class="card__image" src="../assets/img/card-img1.png" alt="">
+            <div class="card-desc__subtitle"> 
+              <h2 class="chicken-card__title">Гусь</h2><span class="chicken-span">Вес:225г </span>
+            </div>
+            <p class="chicken-text">Фаршированный </p>
+            <div class="card-price__button"> <span>17 900 ₽</span>
+              <div class="buttons-card"> <a class="btn-desc" href="#">Корзина</a>
+                <ion-icon name="cart-outline"></ion-icon>
+              </div>
+            </div>
+          </div>
+          <div class="card"> <img class="card__image" src="../assets/img/card-img2.png" alt="">
+            <div class="card-desc__subtitle"> 
+              <h2 class="chicken-card__title">Утка</h2><span class="chicken-span">Вес:225г </span>
+            </div>
+            <p class="chicken-text">Фаршированная рисом, курагой и айвой </p>
+            <div class="card-price__button"> <span>17 900 ₽</span>
+              <div class="buttons-card"> <a class="btn-desc" href="#">Корзина</a>
+                <ion-icon name="cart-outline"></ion-icon>
+              </div>
+            </div>
+          </div>
+          <div class="card"> <img class="card__image" src="../assets/img/card-img3.png" alt="">
+            <div class="card-desc__subtitle"> 
+              <h2 class="chicken-card__title">Ягненок</h2><span class="chicken-span">Вес:225г </span>
+            </div>
+            <p class="chicken-text">Фаршированный гречневой кашей, <br> курагой, апельсином и зеленым яблоком</p>
+            <div class="card-price__button"> <span>17 900 ₽</span>
+              <div class="buttons-card"> <a class="btn-desc" href="#">Корзина</a>
+                <ion-icon name="cart-outline"></ion-icon>
+              </div>
+            </div>
+          </div>
+          <div class="card"> <img class="card__image" src="../assets/img/card-img4.png" alt="">
+            <div class="card-desc__subtitle"> 
+              <h2 class="chicken-card__title">Индейка</h2><span class="chicken-span">Вес:225г </span>
+            </div>
+            <p class="chicken-text">Фаршированный гречневой кашей, <br> курагой, апельсином и зеленым яблоком</p>
+            <div class="card-price__button"> <span>17 900 ₽</span>
+              <div class="buttons-card"> <a class="btn-desc" href="#">Корзина</a>
+                <ion-icon name="cart-outline"></ion-icon>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contact-about"> 
+        <div class="contact-blog__content container"> 
+          <div class="number-data"> 
+            <h2 class="number-data__title">Контакты</h2>
+            <hr>
+            <div class="location"> 
+              <div class="location-data"> 
+                <div class="icon-loc"> <img src="../assets/img/Location.png" alt=""></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
